--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,14 @@
         android:theme="@style/Theme.Coco"
         tools:targetApi="31">
         <activity
-            android:name=".IntroActivity"
+            android:name=".view.SelectActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".view.intro.IntroActivity"
             android:exported="true"
             android:theme="@style/Theme.Coco.Splash">
             <intent-filter>
@@ -27,7 +34,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
