--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -65,7 +66,14 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
+    //datastore
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
 
+    //lottie
+    implementation 'com.airbnb.android:lottie:6.0.0'
 
-
+    //room
+    implementation 'androidx.room:room-runtime:2.5.1'
+    annotationProcessor("androidx.room:room-compiler:2.5.1")
+    kapt 'androidx.room:room-compiler:2.5.1'
 }
