--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,7 @@ dependencies {
     annotationProcessor("androidx.room:room-compiler:2.5.1")
     implementation 'androidx.room:room-ktx:2.5.1'
     kapt 'androidx.room:room-compiler:2.5.1'
+
+    //livedata
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
 }
